--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,1 +1,41 @@
-<p>brand works!</p>
+<div class="container" style="margin-top:50px ;"> 
+    <div class="title">
+        <h3>Tables</h3>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Simple Table</h4>
+        </div>
+        <div class="col-md-12">
+            <div class="table-responsive">
+
+                <table  class="table table-dark table-hover" style="background-color: #49346f9c;">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">MARKA</th>
+
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let brand of brands">
+
+                        <th scope="row">{{brand.brandId}}</th>
+                        <td>{{brand.brandName}}</td>
+                       
+                      </tr>
+                      
+                    </tbody>
+                  </table>
+
+
+
+
+
+
+
+            </div>
+
+        </div>
+    </div>
+</div>
