--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,3 +1,4 @@
+
 <div class="container" style="margin-top:50px ;"> 
     <div class="title">
         <h3>Tables</h3>
@@ -13,13 +14,13 @@
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">MARKA</th>
+                        <th scope="col">Renk</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let brand of brands">
-                        <th scope="row">{{brand.brandId}}</th>
-                        <td>{{brand.brandName}}</td>
+                      <tr *ngFor="let color of colors">
+                        <th scope="row">{{color.colorId}}</th>
+                        <td>{{color.colorName}}</td>
                       </tr>
                     </tbody>
                   </table>
