--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="#">ARAÇLAR</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">RENKLER</a>
+            <a class="nav-link" routerLink="colors" routerLinkActive="active">RENKLER</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="brands" routerLinkActive="active">MARKALAR</a>
