--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             <a class="nav-link" routerLink="brands" routerLinkActive="active">MARKALAR</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">MÜŞTERİLER</a>
+            <a class="nav-link" routerLink="customers" routerLinkActive="active">MÜŞTERİLER</a>
           </li>
           
       </ul>
