--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,10 @@
           <a class="nav-link" href="#">ANASAYFA <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ARAÇLAR</a>
+          <a class="nav-link" routerLink="rentals" routerLinkActive="active">KİRALAMALAR</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="cars" routerLinkActive="active">ARAÇLAR</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="colors" routerLinkActive="active">RENKLER</a>
