--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,30 +1,43 @@
 <div class="container" style="margin-top:50px ;"> 
-    <div class="title">
-        <h3>Tables</h3>
-    </div>
-    <div class="row">
+   
+    <div class="row">     
         <div class="col-md-12">
-            <h4>Simple Table</h4>
-        </div>
-        <div class="col-md-12">
-            <div class="table-responsive">
-
-                <table  class="table table-dark table-hover" style="background-color: #49346f9c;">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">MARKA</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let brand of brands">
-                        <th scope="row">{{brand.brandId}}</th>
-                        <td>{{brand.brandName}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Markalar</h3>
+              <div class="pull-right">
+                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">
+                  <i class="glyphicon glyphicon-filter"></i>
+                </span>
+              </div>
             </div>
+            <div class="panel-body" style="padding: 10px 0px;">
+              <input  type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Marka Yazınız.." />
+            </div>
+            <table  class="table table-light table-hover table-striped table-bordered
+            " >
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">MARKA</th>
+                    <th class="pull-right" style= "width:150px" scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let brand of brands">
+                    <th scope="row">{{brand.brandId}}</th>
+                    <td>{{brand.brandName}}</td>
+                    <td style= "width:150px">
+                      <button type="button" class="btn btn-outline-secondary"><i class="fa fa-list" aria-hidden="true"></i>
+                         Arabalar</button></td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+          </div> 
+
+              
+
 
         </div>
     </div>
