--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,42 +1,56 @@
-<div class="container" style="margin-top:50px ;"> 
-    <div class="title">
-        <h4>ARAÇLAR</h4>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p>ARAÇ LİSTESİ</p>
-        </div>
-        <div class="col-md-12">
-            <div class="table-responsive">
 
-                <table  class="table table-dark table-hover" style="background-color: #49346f9c;">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">ARAÇ</th>
-                        <th scope="col">MARKA</th>
-                        <th scope="col">RENK</th>
-                        <th scope="col">YIL</th>
-                        <th scope="col">GÜNLÜK FİYAT</th>
-                        <th scope="col">AÇIKLAMA</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let car of cars">
-                        <th scope="row">{{car.carId}}</th>
-                        <td>{{car.carName}}</td>
-                        <td>{{car.brandName}}</td>
-                        <td>{{car.colorName}}</td>
-                        <td>{{car.modelYear}}</td>
-                        <td>{{car.dailyPrice}}</td>
-                        <td>{{car.description}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
 
-            </div>
 
-        </div>
-    </div>
+
+<!--MDB Tables-->
+<div class="container mt-5">
+
+
+  <div class="card mb-4">
+      <div class="card-body" style="background-color: #d7c4f640;">
+          <!-- Grid row -->
+          <div class="row">
+              <!-- Grid column -->
+              <div class="col-md-12">
+                  <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Araçlar</h2>
+                  <div class="input-group md-form form-sm form-2 pl-0">
+                      <input class="form-control my-0 py-1 pl-3 purple-border" type="text" placeholder="Renk giriniz.." aria-label="Search">
+                     
+                  </div>
+              </div>
+              <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+          <!--Table-->
+          <table class="table table-striped">
+            
+            <thead>
+              <tr>
+                <th >#</th>
+                <th >Araç</th>
+                <th >Marka</th>
+                <th >Renk</th>
+                <th >Yıl</th>
+                <th >Günlük Fiyat</th>
+                <th >Açıklama</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let car of cars">
+                <th scope="row">{{car.carId}}</th>
+                <td>{{car.carName}}</td>
+                <td>{{car.brandName}}</td>
+                <td>{{car.colorName}}</td>
+                <td>{{car.modelYear}}</td>
+                <td>{{car.dailyPrice}}</td>
+                <td>{{car.description}}</td>
+              </tr>
+            </tbody>
+          </table>
+          <!--Table-->
+      </div>
+  </div>
+
+
 </div>
-
+<!--MDB Tables-->
