--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,32 +1,45 @@
 
-<div class="container" style="margin-top:50px ;"> 
-    <div class="title">
-        <h3>Tables</h3>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <h4>Simple Table</h4>
-        </div>
-        <div class="col-md-12">
-            <div class="table-responsive">
 
-                <table  class="table table-dark table-hover" style="background-color: #49346f9c;">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Renk</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let color of colors">
-                        <th scope="row">{{color.colorId}}</th>
-                        <td>{{color.colorName}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
 
-            </div>
+<!--MDB Tables-->
+<div class="container mt-5">
 
-        </div>
-    </div>
+
+  <div class="card mb-4">
+      <div class="card-body" style="background-color: #d7c4f640;">
+          <!-- Grid row -->
+          <div class="row">
+              <!-- Grid column -->
+              <div class="col-md-12">
+                  <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Renkler</h2>
+                  <div class="input-group md-form form-sm form-2 pl-0">
+                      <input class="form-control my-0 py-1 pl-3 purple-border" type="text" placeholder="Renk giriniz.." aria-label="Search">
+                     
+                  </div>
+              </div>
+              <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+          <!--Table-->
+          <table class="table table-striped">
+            
+            <thead>
+              <tr>
+                <th >#</th>
+                <th >Renk</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let color of colors">
+                <th scope="row">{{color.colorId}}</th>
+                <td>{{color.colorName}}</td>
+              </tr>
+            </tbody>
+          </table>
+          <!--Table-->
+      </div>
+  </div>
+
+
 </div>
+<!--MDB Tables-->
