object-fit:cover

--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -4,20 +4,15 @@
   
  <!--MDB Tables-->
  <div class="container mt-5">  
-  <div class="card mb-3" >
+  <div class="card mb-3" style="background-color: #d3cfda69;" >
       <div class="row g-0">
         <div class="col-md-6">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                  <div class="carousel-item active">
-                      <img src="https://www.61saat.com/images/haberler/2019/08/internet_uzerinden_sahibinden_araba_ilani_nasil_verilir_h666524_78224.png" class="d-block w-100" alt="...">
+              <div class="carousel-inner" *ngIf="carDetail != null">
+                  <div  *ngFor="let carImage of carDetail.carImagesPaths" [class.active]="carDetail.carImagesPaths[0]==carImage" class="carousel-item">
+                      <img style="height: 350px;object-fit: cover;" src="https://localhost:44348/Images/{{carImage}}" class="d-block w-100 mx-auto img-thumbnail" alt="...">
                     </div>
-                    <div class="carousel-item">
-                      <img src="https://www.sifiraracal.com/resim/renk/561/nissan-qashqai-kirmizi.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="https://www.sifiraracal.com/resim/model/561/1264/nissan-qashqai.png" class="d-block w-100" alt="...">
-                    </div>
+                    
               </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -31,9 +26,13 @@
         </div>
         <div class="col-md-6">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h3 class="card-title" style="margin-bottom: 0.1em;">{{carDetail.carName}}</h3>
+            <p class="card-text"><small class="text-muted">{{carDetail.brandName}}</small></p>
+            <p class="card-text font-bold text-primary h4">{{carDetail.dailyPrice}} ₺</p>
+            <p class="card-text">{{carDetail.description}}</p>
+            <span class="card-text font-bold text-secondary h6"> Model Yılı : </span>  <span class="card-text text-secondary h6"> {{carDetail.modelYear}} </span>
+
+            <p class="card-text"><small class="text-muted">{{carDetail.colorName}}</small></p>
           </div>
         </div>
       </div>
@@ -43,29 +42,3 @@
 
 
 
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
