--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -34,7 +34,7 @@
                     <th scope="row">{{brand.brandId}}</th>
                     <td>{{brand.brandName}}</td>
                     <td style= "width:150px">
-                      <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-secondary"><i class="fa fa-list" aria-hidden="true"></i>
+                      <button (click)="getCarsByBrandId(brand.brandId)" type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-secondary"><i class="fa fa-list" aria-hidden="true"></i>
                          Arabalar</button></td>
                     
                   </tr>
@@ -56,17 +56,36 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Arabalar</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          <div *ngIf="cars.length>0">
+
+
+
+            <ol class="list-group list-group-numbered">
+              <li *ngFor="let car of cars" class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div  class="fw-bold font-weight-bold" > {{car.carName}}</div>
+                  <span class="font-weight-light">{{car.description}}</span>
+                 
+                </div>
+                <span class="badge  rounded-pill " style="color:white;background-color: #4a278adb; font-size: 16px !important; margin-top: 12px;">{{car.dailyPrice}} ₺ </span>
+              </li>
+            </ol>
+
+
+          </div>
+          <div *ngIf="cars.length==0"> 
+            Bu Markaya Ait Araç Yok.
+          </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+          
         </div>
       </div>
     </div>
