--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,92 +1,97 @@
- <!--MDB Tables-->
- <div class="container mt-5">
+<!--MDB Tables-->
+<div class="container mt-5">
 
 
-    <div class="card mb-4">
-        <div class="card-body" style="background-color: #d7c4f640;">
-            <!-- Grid row -->
-            <div class="row">
-                <!-- Grid column -->
-                <div class="col-md-12">
-                    <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Markalar</h2>
-                    <div class="input-group md-form form-sm form-2 pl-0">
-                        <input class="form-control my-0 py-1 pl-3 purple-border" type="text" placeholder="Marka giriniz.." aria-label="Search">
-                       
-                    </div>
-                </div>
-                <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-            <!--Table-->
-            <table class="table table-striped">
-                <!--Table head-->
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Marka</th>
-                        <th>##</th>
-                    </tr>
-                </thead>
-                <!--Table head-->
-                <!--Table body-->
-                <tbody>
-                  <tr *ngFor="let brand of brands">
-                    <th scope="row">{{brand.brandId}}</th>
-                    <td>{{brand.brandName}}</td>
-                    <td style= "width:150px">
-                      <button (click)="getCarsByBrandId(brand.brandId)" type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-secondary"><i class="fa fa-list" aria-hidden="true"></i>
-                         Arabalar</button></td>
-                    
-                  </tr>
-                  
-                </tbody>
-                <!--Table body-->
-            </table>
-            <!--Table-->
+  <div class="card mb-4">
+    <div class="card-body" style="background-color: #d7c4f640;">
+      <!-- Grid row -->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-12">
+          <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Markalar</h2>
+          <div class="input-group md-form form-sm form-2 pl-0">
+            <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText" id="filterText" placeholder="Marka giriniz.."
+              aria-label="Search">
+
+          </div>
         </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+      <!--Table-->
+      <table class="table table-striped">
+        <!--Table head-->
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Marka</th>
+            <th>##</th>
+          </tr>
+        </thead>
+        <!--Table head-->
+        <!--Table body-->
+        <tbody>
+          <tr *ngFor="let brand of brands | brandFilterPipe:filterText">
+            <th scope="row">{{brand.brandId}}</th>
+            <td>{{brand.brandName}}</td>
+            <td style="width:150px">
+              <button (click)="getCarsByBrandId(brand.brandId)" type="button" data-toggle="modal"
+                data-target="#exampleModal" class="btn btn-outline-secondary"><i class="fa fa-list"
+                  aria-hidden="true"></i>
+                Arabalar</button>
+            </td>
+
+          </tr>
+
+        </tbody>
+        <!--Table body-->
+      </table>
+      <!--Table-->
     </div>
-  
-  
   </div>
-  <!--MDB Tables-->
 
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Arabalar</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+
+</div>
+<!--MDB Tables-->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Arabalar</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div *ngIf="cars.length>0">
+
+          <ol class="list-group list-group-numbered">
+            <li *ngFor="let car of cars" class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold font-weight-bold"> {{car.carName}}</div>
+                <span class="font-weight-light">{{car.description}}</span>
+
+              </div>
+              <span class="badge  rounded-pill "
+                style="color:white;background-color: #4a278adb; font-size: 16px !important; margin-top: 12px;">{{car.dailyPrice}}
+                ₺ </span>
+            </li>
+          </ol>
+
+
         </div>
-        <div class="modal-body">
-          <div *ngIf="cars.length>0">
-
-
-
-            <ol class="list-group list-group-numbered">
-              <li *ngFor="let car of cars" class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div  class="fw-bold font-weight-bold" > {{car.carName}}</div>
-                  <span class="font-weight-light">{{car.description}}</span>
-                 
-                </div>
-                <span class="badge  rounded-pill " style="color:white;background-color: #4a278adb; font-size: 16px !important; margin-top: 12px;">{{car.dailyPrice}} ₺ </span>
-              </li>
-            </ol>
-
-
-          </div>
-          <div *ngIf="cars.length==0"> 
-            Bu Markaya Ait Araç Yok.
-          </div>
+        <div *ngIf="cars.length==0">
+          Bu Markaya Ait Araç Yok.
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
-          
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+
       </div>
     </div>
   </div>
+</div>
