--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -33,6 +33,8 @@
             <span class="card-text font-bold text-secondary h6"> Model Yılı : </span>  <span class="card-text text-secondary h6"> {{carDetail.modelYear}} </span>
 
             <p class="card-text"><small class="text-muted">{{carDetail.colorName}}</small></p>
+            
+            <button  data-toggle="modal" data-target="#exampleModal" type="button" class="btn btn-outline-primary"><i class="fa fa-car" aria-hidden="true"></i> Kirala</button>
           </div>
         </div>
       </div>
@@ -42,3 +44,27 @@
 
 
 
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Araç Kirala</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <label for="rentdate"> Kiralama Tarihi</label>
+          <input class="form-control" type="datetime-local" id="rentdate" name="rentdate">
+          <label style="margin-top: 21px;" for="returndate"> Teslim Tarihi</label>
+          <input class="form-control" type="datetime-local" id="returndate" name="returndate">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+          <button type="button" class="btn btn-primary">Kirala</button>
+        </div>
+      </div>
+    </div>
+  </div>
