--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,37 +1,47 @@
 
-<div class="container" style="margin-top:50px ;"> 
-    <div class="title">
-        <h3>Tables</h3>
-    </div>
-    <div class="row">
+<!--MDB Tables-->
+<div class="container mt-5">
+
+
+  <div class="card mb-4">
+    <div class="card-body" style="background-color: #d7c4f640;">
+      <!-- Grid row -->
+      <div class="row">
+        <!-- Grid column -->
         <div class="col-md-12">
-            <h4>Simple Table</h4>
+          <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Müşteriler</h2>
+          <div class="input-group md-form form-sm form-2 pl-0">
+            
+
+          </div>
         </div>
-        <div class="col-md-12">
-            <div class="table-responsive">
-
-                <table  class="table table-dark table-hover" style="background-color: #49346f9c;">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Firma</th>
-                        <th scope="col">kullanıcı</th>
-                        <th scope="col">numara</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let customer of customers">
-                        <th scope="row">{{customer.customerId}}</th>    
-                        <td>{{customer.companyName}}</td>
-                        <td>{{customer.userId}}</td>
-                        <td>{{customer.customerPhoneNumber}}</td>
-                        
-                      </tr>
-                    </tbody>
-                  </table>
-
-            </div>
-
-        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+      <!--Table-->
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Firma</th>
+            <th scope="col">Kullanıcı</th>
+            <th scope="col">Numara</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let customer of customers">
+            <th scope="row">{{customer.customerId}}</th>    
+            <td>{{customer.companyName}}</td>
+            <td>{{customer.userId}}</td>
+            <td>{{customer.customerPhoneNumber}}</td>
+            
+          </tr>
+        </tbody>
+      </table>
+      <!--Table-->
     </div>
+  </div>
+
+
 </div>
+<!--MDB Tables-->
