--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,34 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6025ca75;">
-    <a class="navbar-brand" href="#">BMK</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">ANASAYFA <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="rentals" routerLinkActive="active">KİRALAMALAR</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="cars" routerLinkActive="active">ARAÇLAR</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="colors" routerLinkActive="active">RENKLER</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="brands" routerLinkActive="active">MARKALAR</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="customers" routerLinkActive="active">MÜŞTERİLER</a>
-          </li>
-          
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+  <a class="navbar-brand" href="#">BMK</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">ANASAYFA <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="rentals" routerLinkActive="active">KİRALAMALAR</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="cars" routerLinkActive="active">ARAÇLAR</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="colors" routerLinkActive="active">RENKLER</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="brands" routerLinkActive="active">MARKALAR</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="customers" routerLinkActive="active">MÜŞTERİLER</a>
+      </li>
+
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <div>
+        <button type="button" class="btn btn-dark" routerLink="login">Giriş</button>
+        <button type="button" class="btn btn-light " routerLink="register" style="margin-left: 13px;">Kayıt Ol</button>
+      </div>
+
     </div>
-  </nav>
+  </div>
+</nav>
