--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -7,21 +7,22 @@
               <h3 class="panel-title" style="margin-bottom: 30px;;">Kayıt Ol</h3>
            </div>
             <div class="panel-body">
-              <form accept-charset="UTF-8" role="form">
+              <form [formGroup]="registerForm" accept-charset="UTF-8" role="form">
               <fieldset>
                 <div class="form-group">
-                    <input class="form-control" placeholder="İsim" name="firstName" type="text" value="">
+                    <input formControlName="firstName" class="form-control" placeholder="İsim" name="firstName" type="text" value="">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Soyisim" name="lastName" type="text" value="">
+                    <input formControlName="lastName" class="form-control" placeholder="Soyisim" name="lastName" type="text" value="">
                 </div>
                     <div class="form-group">
-                      <input class="form-control" placeholder="E-mail" name="email" type="text">
+                      <input formControlName="email" class="form-control" placeholder="E-mail" name="email" type="text">
                   </div>
                   <div class="form-group">
-                      <input class="form-control" placeholder="Şifre" name="password" type="password" value="">
+                      <input formControlName="password" class="form-control" placeholder="Şifre" name="password" type="password" value="">
                   </div>
-                  <input style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;" class="btn btn-lg btn-success btn-block" type="submit" value="Kayıt">
+                  <input (click)="register()" style="margin-top: 10px; background-color: #6f42c1e3; border-color: #141516;"
+                  class="btn btn-lg btn-success btn-block" type="submit" value="Kayıt">
               </fieldset>
                 </form>
           </div>
