--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -8,10 +8,18 @@
       <div class="row">
         <!-- Grid column -->
         <div class="col-md-12">
-          <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Markalar</h2>
+          <div style="display: inline-block;width: 100%;">
+            <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text" style="display: inline-block;">Markalar</h2>
+            <button routerLink="add" style="margin: 20px 0px;" type="button" class="btn btn-dark pull-right"> <i class="fa fa-plus"
+                aria-hidden="true"></i>
+              Yeni Ekle</button>
+
+
+          </div>
+
           <div class="input-group md-form form-sm form-2 pl-0">
-            <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText" id="filterText" placeholder="Marka giriniz.."
-              aria-label="Search">
+            <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText"
+              id="filterText" placeholder="Marka giriniz.." aria-label="Search">
 
           </div>
         </div>
@@ -34,11 +42,13 @@
           <tr *ngFor="let brand of brands | brandFilterPipe:filterText">
             <th scope="row">{{brand.brandId}}</th>
             <td>{{brand.brandName}}</td>
-            <td style="width:150px">
+            <td style="width:250px">
               <button (click)="getCarsByBrandId(brand.brandId)" type="button" data-toggle="modal"
                 data-target="#exampleModal" class="btn btn-outline-secondary"><i class="fa fa-list"
                   aria-hidden="true"></i>
                 Arabalar</button>
+                <button routerLink="update/{{brand.brandId}}" style="margin-left: 12px;" type="button" class="btn btn-dark"><i
+                   class="fa fa-pencil-square-o" aria-hidden="true"></i> Güncelle</button>
             </td>
 
           </tr>
