--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -12,7 +12,15 @@
           <div class="row">
               <!-- Grid column -->
               <div class="col-md-12">
-                  <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text">Araçlar</h2>
+                <div style="display: inline-block;width: 100%;">
+                  <h2 class="pt-3 pb-4  font-bold font-up deep-purple-text" style="display: inline-block;">Araçlar</h2>
+                  <button routerLink="add" style="margin: 20px 0px;" type="button" class="btn btn-dark pull-right"> <i class="fa fa-plus"
+                      aria-hidden="true"></i>
+                    Yeni Ekle</button>
+      
+      
+                </div>
+
                   <div class="input-group md-form form-sm form-2 pl-0">
                       <input class="form-control my-0 py-1 pl-3 purple-border" type="text" [(ngModel)]="filterText" id="filterText" placeholder="Araç giriniz.." aria-label="Search">
                      
@@ -46,7 +54,7 @@
                 <td>{{car.dailyPrice}}</td>
                 <td>{{car.description}}</td>
                <td style= "width:150px">
-                  <button type="button" routerLink="/cars/{{car.carId}}" class="btn btn-outline-secondary"><i class="fa fa-eye" aria-hidden="true"></i>
+                  <button type="button" routerLink="/cars/detail/{{car.carId}}" class="btn btn-outline-secondary"><i class="fa fa-eye" aria-hidden="true"></i>
                      Detaylar</button></td>
               </tr>
             </tbody>
