--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -26,6 +26,7 @@
             <th scope="col">Firma</th>
             <th scope="col">Kullanıcı</th>
             <th scope="col">Numara</th>
+            <th scope="col">Findex Puanı</th>
           </tr>
         </thead>
         <tbody>
@@ -34,6 +35,7 @@
             <td>{{customer.companyName}}</td>
             <td>{{customer.userId}}</td>
             <td>{{customer.customerPhoneNumber}}</td>
+            <td>{{customer.findexPoint}}</td>
             
           </tr>
         </tbody>
