--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -70,7 +70,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
-          <button (click)="RentTheCar()" type="button" class="btn btn-primary">Kirala</button>
+          <button  (click)="RentTheCar()" type="button"  data-dismiss="modal" class="btn btn-primary">Kirala</button>
         </div>
       </div>
     </div>
